--- a/test_cons.csproj
+++ b/test_cons.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="any_class.cs" />
-    <Compile Include="con_into_db.cs" />
+    <Compile Include="templ_any_class\con_into_db.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -53,7 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="anyFiles\XMLFile1.xml" />
-    <Content Include="readme.txt" />
+    <Content Include="templ\readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
